Added stuttgart dataset.

--- a/src/src/app/ui-menu/dialog-data-selection.html
+++ b/src/src/app/ui-menu/dialog-data-selection.html
@@ -13,6 +13,7 @@
                 <mat-radio-button value="Detroit">Detroit</mat-radio-button>
                 <mat-radio-button value="Prague">Prague</mat-radio-button>
                 <mat-radio-button value="Rome">Rome</mat-radio-button>
+                <mat-radio-button value="Stuttgart">Stuttgart</mat-radio-button>
             </mat-radio-group>
 
             <div class="selectButtonDiv">
